--- a/netlify.toml
+++ b/netlify.toml
@@ -1,16 +1,11 @@
 [build]
-  # Команда, которая запускается при деплое. Она запустит ваш "vite build"
-  command = "npm run build"
   
-  # Директория со статическими файлами (фронтенд).
-  # Это наиболее вероятная причина 404. 
-  # В типичных структурах это может быть 'client/dist' или 'dist' (если vite.config.ts настроен на вывод в корень).
-  # Начните с 'client/dist' и проверьте эту папку после локальной сборки.
+  command = "npm install && npm run build"
+  
+ 
   publish = "client/dist" 
 
-# Настройка для Single Page Application (SPA)
-# Это нужно для таких роутеров, как React Router, чтобы при прямом заходе на /about 
-# Netlify возвращал index.html вместо 404.
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
