--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "svgo": "^4.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "terser": "^5.44.0",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
     "vite-plugin-image-optimizer": "^2.0.2",
